--- a/src/css/style_dummy.css
+++ b/src/css/style_dummy.css
@@ -69,7 +69,7 @@
   display: block;
 }
 .usr-set-item {
-  padding: 14px 20px;
+  padding: 14px 20px 20px;
 }
 .usr-set-item .set-btn-wrap {
   position: absolute;
