--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1734,6 +1734,7 @@ body {
   border-radius: 10px;
   background-color: #fff;
   text-align: center;
+  transition: 0.2s ease-in;
 }
 .set-btn-wrap > .set-btn:hover {
   box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
