--- a/src/css/style_sub.css
+++ b/src/css/style_sub.css
@@ -26,6 +26,10 @@
   margin-bottom: 0;
 }
 .usr-kywrd-wrap .usr-kywrd-item.add-item {
+  height: 62px;
+}
+.usr-kywrd-wrap .usr-kywrd-item.add-item > span {
+  line-height: 42px;
 }
 .usr-kywrd-wrap .usr-kywrd-item:hover {
   background-color: #f4f5f5;
@@ -91,6 +95,33 @@
   width: calc(50% - 10px);
   vertical-align: top;
 }
+
+.usr-set-item .set-info-item.info-optional-word .word-not-yet {
+  width: 100%;
+  border-radius: 6px;
+  border: 1px solid #eee;
+  background-color: #f7f8f8;
+  font-size: 14px;
+  text-align: center;
+}
+.usr-set-item .set-info-item.info-optional-word .word-not-yet > p {
+  line-height: 65px;
+}
+.usr-set-item.now-on .set-info-item.info-optional-word .word-not-yet {
+  display: none;
+}
+.usr-set-item .set-info-item.info-optional-word.added .word-not-yet {
+  display: none;
+}
+
+.usr-set-item .set-info-item.info-optional-word .added-word-wrap {
+  display: none;
+}
+.usr-set-item .set-info-item.info-optional-word.added .added-word-wrap,
+.usr-set-item.now-on .set-info-item.info-optional-word .added-word-wrap {
+  display: block;
+}
+
 .usr-set-item .set-info-item.info-optional-word.info-exclude-word {
   float: right;
 }
