--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -996,6 +996,12 @@ address > .copyright {
 .show-all-content .content-item > .content-channel.blog-naver {
   background-image: url("../img/icon/icon-blog-naver.svg");
 }
+.show-all-content .content-item > .content-channel.community-all {
+  background-image: url("../img/icon/icon-community.svg");
+}
+.show-all-content .content-item > .content-channel.news-all {
+  background-image: url("../img/icon/icon-news-content.svg");
+}
 
 .show-all-content .content-item > .content-subs-list {
   display: inline-block;
@@ -1365,7 +1371,6 @@ h3.logo {
 }
 
 /** 검색 설정 모달 **/
-/***
 #srchSetModal {
   display: none;
 }
@@ -1620,7 +1625,6 @@ h3.logo {
   font-size: 13px;
   font-weight: 500;
 }
-*/
 
 @media all and (max-width: 1400px) {
   /* HEADER > search area 1400px */
