--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1008,29 +1008,33 @@ body {
   font-size: 0;
   background-color: #fafafa;
 }
-.rank-list > .rank-item > * {
+.rank-list > .rank-item > *,
+.rank-list > .rank-title > * {
   display: inline-block;
   line-height: 34px;
   font-size: 14px;
   font-weight: 500;
   text-align: center;
 }
-.rank-list > .rank-item > .item-standing {
+.rank-list > .rank-item > .item-standing,
+.rank-list > .rank-title > .item-standing {
   width: 26%;
 }
-.rank-list > .rank-item > .item-standing.sort-select-box {
+.rank-list > .rank-title > .item-standing.sort-select-box {
   margin-left: 0;
 }
-.rank-list > .rank-item > .item-standing.sort-select-box .sort-select {
+.rank-list > .rank-title > .item-standing.sort-select-box .sort-select {
   width: 100%;
   padding-left: 14px;
   box-sizing: border-box;
 }
-.rank-list > .rank-item > .item-keyword {
+.rank-list > .rank-item > .item-keyword,
+.rank-list > .rank-title > .item-keyword {
   width: 40%;
   white-space: nowrap;
 }
-.rank-list > .rank-item > .item-num {
+.rank-list > .rank-item > .item-num,
+.rank-list > .rank-title > .item-num {
   width: 34%;
 }
 .rank-list > .rank-item.item-subs > .item-num {
