--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -87,7 +87,8 @@ header:hover {
   font-size: 0;
 }
 .header-inner > .mobile-menu-btn,
-.header-inner > .search-slide-btn {
+.header-inner > .search-slide-btn,
+.header-inner > .go-preset-btn {
   display: none;
   cursor: pointer;
 }
@@ -1684,7 +1685,8 @@ h3.logo {
   }
 
   .header-inner > .mobile-menu-btn,
-  .header-inner > .search-slide-btn {
+  .header-inner > .search-slide-btn,
+  .header-inner > .go-preset-btn {
     display: inline-block;
     position: relative;
     width: 24px;
@@ -1716,6 +1718,18 @@ h3.logo {
   }
   .mobile-menu-btn > .link-area .menu-line.line-3 {
     bottom: 0;
+  }
+  .header-inner > .go-preset-btn {
+    float: left;
+    background-image: url("../img/icon/icon-setting.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 22px;
+  }
+  .header-inner > .go-preset-btn > a {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
   .header-inner > .search-slide-btn {
     float: right;
