--- a/src/css/style_sub.css
+++ b/src/css/style_sub.css
@@ -138,6 +138,7 @@
   border: 1px solid #aaa;
 }
 .usr-set-item .info-search-word .info-item-input input[type="text"] {
+  position: relative;
   font-size: 24px;
   width: 45%;
 }
@@ -202,24 +203,57 @@
 
   .usr-set-wrap {
     position: fixed;
-    top: 50%;
-    right: 50%;
-    transform: translate(50%, -50%);
+    top: 7vh;
+    right: -50%;
+    transform: translateX(50%);
     width: 95%;
     z-index: 300;
+    transition: 0.6s;
   }
+  .usr-set-wrap.active {
+    right: 50%;
+  }
+
   .usr-set-wrap .usr-set-item {
     width: 100%;
     height: 85vh;
     overflow-y: scroll;
   }
+  .usr-set-wrap .usr-set-item .usr-set-item-cls {
+    display: inline-block;
+    position: absolute;
+    top: 25px;
+    left: 28px;
+    width: 11px;
+    height: 11px;
+    border-top: 2px solid #313131;
+    border-left: 2px solid #313131;
+    transform: rotate(-45deg);
+    z-index: 200;
+  }
+
+  .usr-set-item .info-search-word .info-item-input {
+    position: relative;
+    padding-left: 30px;
+  }
+  /* .usr-set-item .info-search-word .info-item-input::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 6px;
+    width: 11px;
+    height: 11px;
+    border-top: 2px solid #313131;
+    border-left: 2px solid #313131;
+    transform: rotate(-45deg);
+  } */
 
   .usr-set-item .set-info-item.info-optional-word {
     width: 100%;
   }
 
   .info-period .searched-date-wrap > .search-date {
-    /* width: 100%; */
     width: calc(50% - 5px);
   }
   .usr-set-item .searched-date-wrap .search-date > .date-input > input {
